# Arcade-MCP

./: .env.example  .gitignore  LICENSE  README.md  debug.html  mcp_server.py  pyproject.toml  readme.md  server.py  style.css
CLI_MCP/: script.js  server.py
CLI_MCP/core/: tools.py
WEB_MCP/: debug.html  mcp_client.py  mcp_server.py  requirement.txt  script.js  server.py  skill_manager.py  style.css
WEB_MCP/core/: claude.py
WEB_MCP/skills/: code_skill.md  document_skill.md  summary_skill.md
core/: chat.py
